@@ -9,6 +9,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 ## Added
 
 - Pushing release-candidates to Pypi with ensured transparent versioning using git tags.
+- Added cycler and colormath package dependencies
 
 ## Changed
 
